# models/Bus.model.js
@@ -1,66 +1,63 @@
 const mongoose = require('mongoose');
-var userSchema = new mongoose.Schema({
-    collegeId: {
-        type: String,
-        required: true,
-        unique: true,
-        trim: true,
-        minlength: 3
-    },
-    name: {
-        type: String,
-        required: true,
-        trim: true,
-        minlength: 3
-    },
-    isDriver:{
-        type: Boolean,
-        default: false,
-    },
-    email: {
-        type: String,
-        required: true,
-        trim: true,
-        minlength: 3
-    },
-    isEmailVerified: {
-        type: Boolean,
-        default: false,
-    },
-    otp: {
-        type: String,
-    },
-    phoneNumber: {
-        type: String,
-        required: true,
-        trim: true,
-        minlength: 3
-    },
-    password: {
-        type: String,
-        required: true,
-        trim: true,
-        minlength: 3
-    },
-    branch: {
-        type: String,
-        required: true,
-        trim: true,
-        enum: ['CSE', 'EE', 'EC', 'IT']
-    },
-    year: {
-        type: String,
-        required: true,
-        enum: ['1', '2', '3', '4']
-    },
-    address: {
-        type: String,
-        required: true,
-        trim: true,
-        minlength: 3
-    },
+const busSchema = new mongoose.Schema({
 
-
+    // write the schema for bus 
+    busNumber: {
+        type: String,
+        required: true,
+        trim: true,
+        minlength: 3
+    },
+    driverId: {
+        type: mongoose.Schema.Types.ObjectId,
+        required: true,
+        trim: true,
+        minlength: 3
+    },
+    driverPhoneNumber: {
+        type: String,
+        required: true,
+        trim: true,
+        minlength: 3
+    },
+    busRoute: {
+        type: String,
+        required: true,
+        trim: true,
+        minlength: 3
+    },
+    busCapacity: {
+        type: String,
+        required: true,
+        trim: true,
+        minlength: 3
+    },
+    busType: {
+        type: String,
+        required: true,
+        trim: true,
+        minlength: 3
+    },
+    busStatus: {
+        type: String,
+        required: true,
+        trim: true,
+        minlength: 3
+    },
+    busLocation: {
+        type: String,
+        required: true,
+        trim: true,
+        minlength: 3
+    },
+    busDriver: {
+        type: String,
+        required: true,
+        trim: true,
+        minlength: 3
+    },
 });
 
-module.exports = mongoose.model('User', userSchema);
+
+
+module.exports = mongoose.model('Bus', busSchema);
